tests/failures/par_mut_command.stderr
error: par_for_each systems cannot accept mutable command buffer references
 --> $DIR/par_mut_command.rs:5:1
  |
5 | #[system(par_for_each)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `system` (in Nightly builds, run with -Z macro-backtrace for more info)
